[package]
name = "vswitch"
version = "0.1.0"
edition = "2021"
authors = ["vswitch team"]
description = "A virtual switch for creating point-to-point networks with a jump server"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.36", features = ["full"] }
futures = "0.3"
tun = "0.6"
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
bytes = "1.5"
thiserror = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
